--- a/artistic-works.html
+++ b/artistic-works.html
@@ -394,19 +394,20 @@
 
     <!-- COLUNA ESQUERDA — TEXTO LONGO -->
     <div class="about-text-col">
-      <h2>About</h2>
+      <h2>Send me a Color</h2>
 
       <p>
-        I work with moving image preservation, analogue film practices,
-        and archival processes, focusing on the transmission of photochemical 
-        knowledge and its contemporary relevance.My practice intersects archival
-        research, expanded cinema,and contemporary digital environments.
+        Film performance                   2023-2024
+        
       </p>
 
       <p>
-      Film preservation specialist with a Master’s degree from Elías Querejeta Zine Eskola (2023),
-      supported by the AMIA George Blood LP Women in Audiovisual Archiving and Technology Scholarship.
-      And a bachelor in Film Studies at ESTC (2021).
+      It is a film performance that explores the mechanical gestures of the 16 mm projectors to reveal
+      light as original material and color as an empirical exploration of the gaze, through a duplication
+      process in analogue cinema that uses an ancient color technique from 1861 by Marxwell called chromatic
+      separation technique. On the screen, thousands of chromatic possibilities unfold through filters and crystals,
+      exploring the refraction and reflection of light in delicate frames of melancholy. The images are flowers,
+      where the color engenders new flowers, and where the color itself acquires movement and will.
       </p>
       <p>
       Have Experience in analog, digital film restoration, and archival research for the Portuguese
@@ -414,8 +415,7 @@
       Participated in various multidisciplinary audiovisual projects as an editing assistant to the artist 
       and director Salomé Lamas. And received a short-term research grant from the Portuguese Cinematheque
       to study the work of the Portuguese avant-garde artist Ernesto de Sousa’s.</p>
-
-      <!-- aqui podes continuar a acrescentar texto, listas, etc -->
+      
     </div>
 
     <!-- COLUNA DIREITA — FOTO + INFO -->
