--- a/index.html
+++ b/index.html
@@ -279,6 +279,10 @@
       text-shadow: 0 12px 42px rgba(0,0,0,.55);
       white-space: nowrap;
     }
+    h1:hover{
+  color: var(--text); /* cor ao passar o rato */
+  opacity: 1;          /* totalmente visível */
+}
 
     /* (3) subtitle pinned to bottom-left INSIDE front frame */
     .front-role{
