--- a/artistic-works.html
+++ b/artistic-works.html
@@ -39,6 +39,8 @@
 }
     header, main{ position: relative; z-index: 1; }
 
+    header, main{ position: relative; z-index: 1; }
+
     /* ===== header minimal ===== */
     header{
       position: fixed;
@@ -131,10 +133,6 @@
     .dropdown:hover .dropdown-content {
       display: block;
     }
-
-     /* ===== about section ===== */
-
-
     /* ===== Main project section ===== */
     main.project-main{
     background:#0a0c11;
