--- a/artistic-works.html
+++ b/artistic-works.html
@@ -145,7 +145,7 @@
   flex-direction: row;
   max-width: 920px;   /* mesmo max-width do hero */
   margin: 0 auto;     /* centraliza horizontalmente */    /* ajusta o espaçamento entre colunas */
-  align-items: center;
+  align-items: flex-start;
   gap: 120px;
 }
 
@@ -162,7 +162,7 @@
   font-family:"Bebas Kai", system-ui, sans-serif;
   letter-spacing:.18em;
   font-size:2.2rem;
-  margin:0 0 32px;
+  margin:0 0 30px;
   color:var(--muted);
   text-transform:uppercase;
   margin-top: 0;
