--- a/artistic-works.html
+++ b/artistic-works.html
@@ -154,7 +154,7 @@
 ======================= */
 
 .about-text-col{
-  max-width:620px;
+  max: width 620px;
   align-items: flex-start
 }
 
@@ -183,18 +183,16 @@
   width:260px;
   display:flex;
   flex-direction:column;
-  align-items:flex-start;
+  align-items:flex-end;
 }
 
 /* foto */
 .about-photo{
   width:220px;
   height:220px;
-  border-radius:50%;
   object-fit:none;
   object-position:-150px -60px;
   opacity:.92;
-  filter:contrast(1.08) saturation(1);
 }
 
 /* nome */
