--- a/artistic-works.html
+++ b/artistic-works.html
@@ -136,7 +136,8 @@
 
     /* ===== about section ===== */
   .about{
-  background:#0a0c11;
+  background: url("Timeline2.gif.gif") center/cover no-repeat fixed;
+  background-color: var(--bg);
   padding:100px 22px 140px;
 }
 
