--- a/artistic-works.html
+++ b/artistic-works.html
@@ -443,9 +443,9 @@
     </div>
   </div>
 
-    <!-- BOTÃO DE DOWNLOAD CV -->
+    <!-- BOTÃO DE DOWNLOAD  -->
    <a href="https://drive.google.com/your-cv-link" target="_blank" class="cv-button">
-    cv
+    final Thesis
    </a>
   </div>  
  </div>
