--- a/artistic-works.html
+++ b/artistic-works.html
@@ -136,7 +136,7 @@
 
     /* ===== about section ===== */
   .about{
-  background: url("Timeline2.gif.gif") center/cover no-repeat fixed;
+  background: url("smc2 (1).gif") center/cover no-repeat fixed;
   background-color: var(--bg);
   padding:100px 22px 140px;
 }
