--- a/artistic-works.html
+++ b/artistic-works.html
@@ -25,7 +25,7 @@
       font-family:"Source Serif 4", serif;
       color: var(--text);
       background-color: var(--bg);
-      background: url("Timeline2.gif.gif") center/cover no-repeat fixed;
+      background: url("smc2 (1).gif") center/cover no-repeat fixed;
     }
 
     body::before{
