--- a/artistic-works.html
+++ b/artistic-works.html
@@ -136,7 +136,16 @@
 
     /* ===== about section ===== */
   .about{
-  background: url("smc2 (1).gif") center/cover no-repeat fixed;
+   opacity: .92;
+   background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(248, 255, 149, 0.5));
+   background-image: 
+    repeating-linear-gradient(
+      0deg,
+      rgba(255,255,255,0.005),
+      rgba(255,255,255,0.005) 1px,
+      transparent 4px,
+      transparent 6px
+  padding: 80px 22px 120px;
   background-color: var(--bg);
   padding:100px 22px 140px;
 }
