--- a/artistic-works.html
+++ b/artistic-works.html
@@ -155,6 +155,7 @@
   margin: 0 auto;     /* centraliza horizontalmente */    /* ajusta o espaçamento entre colunas */
   align-items: flex-start;
   gap: 120px;
+  padding-left: 60px;
 }
 
 /* =======================
