--- a/artistic-works.html
+++ b/artistic-works.html
@@ -162,9 +162,9 @@
    COLUNA ESQUERDA — TEXTO
 ======================= */
 
-.about-text-col{
-  max: width 720px;
-  align-items: flex-start
+.about-text-col {
+  max-width: 720px;
+  align-items: flex-start;
 }
 
 .about-text-col h2{
