--- a/artistic-works.html
+++ b/artistic-works.html
@@ -397,108 +397,72 @@
     </header>
 
   <main>
-<section class="about">
-  <div class="about-inner">
+<section class="project-layout">
 
-    <!-- COLUNA ESQUERDA — TEXTO LONGO -->
-    <div class="about-text-col">
-      <h2>Send me a Color</h2>
+  <!-- COLUNA TEXTO -->
+  <div class="project-text">
 
-      <p>
-        Film performance                   2023-2024
-        
-      </p>
+    <div class="project-header">
+      <h1>
+        Y TODOS LOS MONTES ALTOS QUE HABÍA DEBAJO DE TODOS LOS CIELOS
+        <span>(And all the high mountains under all the skies)</span>
+      </h1>
 
-      <p>
-      It is a film performance that explores the mechanical gestures of the 16 mm projectors to reveal
-      light as original material and color as an empirical exploration of the gaze, through a duplication
-      process in analogue cinema that uses an ancient color technique from 1861 by Marxwell called chromatic
-      separation technique. On the screen, thousands of chromatic possibilities unfold through filters and crystals,
-      exploring the refraction and reflection of light in delicate frames of melancholy. The images are flowers,
-      where the color engenders new flowers, and where the color itself acquires movement and will.
-      </p>
-      <p>
-</p>
-      
+      <div class="project-meta">
+        <span>INSTALACIÓN / FILM | INSTALLATION / FILM</span>
+        <span>En proceso · In development</span>
+        <span class="year">2026</span>
+      </div>
     </div>
 
-    <!-- COLUNA DIREITA — FOTO + INFO -->
-    <div class="about-side">
+    <div class="project-block">
+      <p><strong>Un proyecto de</strong><br>
+      Celeste Rojas Mugica & Louise Martin Papasian</p>
 
-      <img src="pag2.png" alt="Mariana Torres" class="about-photo" />
+      <p><strong>Países de producción</strong><br>
+      Chile / Armenia</p>
 
-      <div class="about-name">Mariana Torres</div>
-
-      <div class="about-contacts">
-        <div class="contact-item">
-          <span class="icon">✉</span>
-          <a href="mailto:mariana1108.torres@gmail.com">
-            mariana1108.torres@gmail.com
-          </a>
-        </div>
-
-        <div class="contact-item">
-          <span class="icon">☎</span>
-          <a href="tel:+351912473730">
-            +351 912 473 730
-          </a>
-        </div>
-
-        <div class="contact-item">
-          <span class="icon">↗</span>
-          <a href="https://vimeo.com/teuvimeo" target="_blank">
-            Vimeo
-           </a>
+      <p><strong>16mm film</strong> | Archive | Color</p>
     </div>
+
+    <div class="project-block">
+      <p><strong>Con el apoyo de</strong></p>
+      <p>
+        FONDART, National Visual Arts Fund – 2025/26 (Chile)<br>
+        FONDART, Ventanilla abierta – 2024 (Chile)<br>
+        DOS MARES (France)<br>
+        Observatorio Astronómico Manuel Foster (Chile)<br>
+        Instituto de Astrofísica, PUC (Chile)<br>
+        Parque Metropolitano de Santiago (Chile)
+      </p>
+    </div>
+
+    <div class="project-block">
+      <p><strong>Residencias</strong></p>
+      <p>
+        INPUT (S8) – A Coruña, Spain · 2023<br>
+        DOS MARES – Marseille, France · 2024/25<br>
+        DDDKunst House – Yerevan, Armenia · 2025
+      </p>
+    </div>
+
+    <div class="project-block synopsis">
+      <p><strong>Sinopsis</strong></p>
+      <p>
+        <em>Y todos los montes altos que había debajo de todos los cielos</em>
+        es un proyecto en colaboración entre Celeste Rojas Mugica y Louise
+        Martin Papasian…
+      </p>
+    </div>
+
   </div>
 
-    <!-- BOTÃO DE DOWNLOAD  -->
-   <a href="https://drive.google.com/your-cv-link" target="_blank" class="cv-button">
-    final Thesis
-   </a>
-  </div>  
- </div>
+  <!-- COLUNA IMAGEM -->
+  <div class="project-image">
+    <img src="img/projeto.jpg" alt="">
+  </div>
+
 </section>
-<!-- BREATHING SPACE -->
-<section class="about-breath"></section>
-<!-- GRANTS & CONFERENCES -->
-<section class="grants">
-  <div class="grants-inner">
-
-    <h2 class="grants-title">Grants & Conferences</h2>
-
-    <ul class="grants-list">
-      <li>
-        <span class="year">2024</span>
-        <span class="desc">Conference Presentation — FIAF Symposium, Paris</span>
-      </li>
-      <li>
-        <span class="year">2023</span>
-        <span class="desc">AMIA George Blood LP Women in Audiovisual Archiving and Technology Scholarship</span>
-      </li>
-      <li>
-        <span class="year">2022</span>
-        <span class="desc">Short-term Research Grant — Cinemateca Portuguesa</span>
-      </li>
-    </ul>
-
-
-   <div class="presentation-photos">
-
-  <figure class="presentation-item">
-    <img src="presenting1.jpg" alt="Conference presentation at FIAF Symposium, Paris">
-    <figcaption>FIAF Symposium, Paris — conference presentation</figcaption>
-  </figure>
-
-  <figure class="presentation-item">
-    <img src="presenting2.jpg" alt="Panel discussion at audiovisual archiving conference">
-    <figcaption>Panel discussion on audiovisual archiving</figcaption>
-  </figure>
-
-  <figure class="presentation-item">
-    <img src="presenting3.jpg" alt="Lecture moment during academic conference">
-    <figcaption>Lecture session — research presentation</figcaption>
-  </figure>
 
 </div>
 
