--- a/artistic-works.html
+++ b/artistic-works.html
@@ -157,7 +157,7 @@
 
 /* TEXTO */
 .project-text{
-  font-family: "Inter", system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
+  font-family: "Bebas Kai", system-ui, sans-serif;
   font-size: 13.6px;
   line-height: 1.62;
   letter-spacing: .015em;
