--- a/artistic-works.html
+++ b/artistic-works.html
@@ -153,6 +153,7 @@
   max-width: 1380px;
   margin: 0 auto;
   padding: 120px 64px 160px;
+  background-color:  #0a0c11; /* almost imperceptible grey */
 }
 
 /* TEXTO */
