--- a/artistic-works.html
+++ b/artistic-works.html
@@ -122,7 +122,7 @@
 
     .dropdown-content li a {
       display: block;
-      color: var(--text-muted);
+      color: var(--muted);
     }
 
     .dropdown-content li a:hover {
