--- a/artistic-works.html
+++ b/artistic-works.html
@@ -152,7 +152,8 @@
 
 /* TEXTO */
 .project-text{
-  font-family: "Bebas Kai", system-ui, sans-serif;
+  font-family:"Source Serif 4", serif;
+  color: var(--text);
   font-size: 13.6px;
   line-height: 1.62;
   letter-spacing: .015em;
