--- a/artistic-works.html
+++ b/artistic-works.html
@@ -147,7 +147,8 @@
   max-width: 1380px;
   margin: 0 auto;
   padding: 120px 64px 160px;
-  background-color:  #0a0c11; /* almost imperceptible grey */
+    background: rgba(10,12,17,.88);
+  backdrop-filter: blur(2px);/
 }
 
 /* TEXTO */
