--- a/artistic-works.html
+++ b/artistic-works.html
@@ -168,6 +168,7 @@
   text-transform: uppercase;
   letter-spacing: .08em;
   margin-bottom: 18px;
+  display: flex-end;
 }
 
 .project-header h1 span{
