--- a/artistic-works.html
+++ b/artistic-works.html
@@ -265,36 +265,34 @@
 
     <div class="project-header">
       <h1>
-        Y TODOS LOS MONTES ALTOS QUE HABÍA DEBAJO DE TODOS LOS CIELOS
-        <span>(And all the high mountains under all the skies)</span>
+        Send me a color
+        <span>Mechanical Gestures to Preserve Flowers:
+              An essay on color reproduction using contact duplication systems</span>
       </h1>
 
       <div class="project-meta">
-        <span>INSTALACIÓN / FILM | INSTALLATION / FILM</span>
-        <span>En proceso · In development</span>
-        <span class="year">2026</span>
+        <span>Film performance| research project</span>
+        <span>16mm film | 12min</span>
+        <span class="year">2024</span>
       </div>
     </div>
 
     <div class="project-block">
-      <p><strong>Un proyecto de</strong><br>
-      Celeste Rojas Mugica & Louise Martin Papasian</p>
+      <p><strong>Director</strong><br>
+      Mariana Torres</p>
 
       <p><strong>Países de producción</strong><br>
-      Chile / Armenia</p>
+      Portugal| Spain</p>
 
-      <p><strong>16mm film</strong> | Archive | Color</p>
+      <p><strong></strong> | Archive | Color</p>
     </div>
 
     <div class="project-block">
       <p><strong>Con el apoyo de</strong></p>
       <p>
-        FONDART, National Visual Arts Fund – 2025/26 (Chile)<br>
-        FONDART, Ventanilla abierta – 2024 (Chile)<br>
-        DOS MARES (France)<br>
-        Observatorio Astronómico Manuel Foster (Chile)<br>
-        Instituto de Astrofísica, PUC (Chile)<br>
-        Parque Metropolitano de Santiago (Chile)
+        Elías Querejeta Zine Eskola (País Vasco)<br>
+        2Deo laboratorio centro cultural Tabakalera (País Vasco)<br>
+        Casa Estrela Association (Portugal)<br>
       </p>
     </div>
 
