--- a/artistic-works.html
+++ b/artistic-works.html
@@ -297,20 +297,31 @@
     </div>
 
     <div class="project-block">
-      <p><strong>Residencias</strong></p>
+      <p><strong>C</strong></p>
       <p>
-        INPUT (S8) – A Coruña, Spain · 2023<br>
-        DOS MARES – Marseille, France · 2024/25<br>
-        DDDKunst House – Yerevan, Armenia · 2025
+        Production: Elias Querjeta Zine Eskola<br>
+        Cinematographer: Helena Estrela<br>
+        development and duplication: Mariana Torres
+        Sound Design: Catalina Giordani & Veronica Boggio
+        Projectionists: Lorena Garcia | Matias Fajn | Inés Vasquez
+
+        Photoquimical Laboratory: Elias Querjeta Zine Eskola 
+        
       </p>
     </div>
 
     <div class="project-block synopsis">
       <p><strong>Sinopsis</strong></p>
       <p>
-        <em>Y todos los montes altos que había debajo de todos los cielos</em>
-        es un proyecto en colaboración entre Celeste Rojas Mugica y Louise
-        Martin Papasian…
+        <em>It is a filmic performance that explores the mechanical 
+          gestures of 16mm projectors to reveal light as a material origin
+         and color as an empirical exploration of vision, through a process
+         of duplication in analog film that employs an old color technique
+         from 1861 by Marxwell, called the chromatic separation technique.
+         On the screen, thousands of chromatic possibilities unfold through filters
+         and crystals, exploring the refraction and reflection of light in delicate 
+        flashes of melancholy. The images are flowers, where color generates new flowers,
+       and where color itself acquires movement and will.
       </p>
     </div>
 
