--- a/artistic-works.html
+++ b/artistic-works.html
@@ -141,14 +141,8 @@
 
 /* CONTAINER */
 .project-layout{
-  display: grid;
-  grid-template-columns: 420px minmax(0, 1fr);
-  gap: 140px;
-  max-width: 1380px;
-  margin: 0 auto;
-  padding: 120px 64px 160px;
-    background: rgba(10,12,17,.88);
-  backdrop-filter: blur(2px);/
+  background:#0a0c11;
+  padding:0px 22px 140px;
 }
 
 /* TEXTO */
