--- a/artistic-works.html
+++ b/artistic-works.html
@@ -166,13 +166,15 @@
 }
 
 .project-header h1 span{
-  display: block;
+  display: flex;
+  align-items: flex-end;
   margin-top: 6px;
   font-style: italic;
   font-weight: 400;
   letter-spacing: .02em;
   text-transform: none;
   color: var(--muted);
+
 }
 
 /* META */
