--- a/artistic-works.html
+++ b/artistic-works.html
@@ -297,11 +297,11 @@
       <p>
         Production: Elias Querjeta Zine Eskola<br>
         Cinematographer: Helena Estrela<br>
-        development and duplication: Mariana Torres
-        Sound Design: Catalina Giordani & Veronica Boggio
-        Projectionists: Lorena Garcia | Matias Fajn | Inés Vasquez
+        development and duplication: Mariana Torres<br>
+        Sound Design: Catalina Giordani & Veronica Boggio<br>
+        Projectionists: Lorena Garcia | Matias Fajn | Inés Vasquez<br>
 
-        Photoquimical Laboratory: Elias Querjeta Zine Eskola 
+        Photoquimical Laboratory: Elias Querjeta Zine Eskola <br>
         
       </p>
     </div>
