--- a/artistic-works.html
+++ b/artistic-works.html
@@ -153,6 +153,12 @@
   line-height: 1.62;
   letter-spacing: .015em;
   color: var(--ink);
+  display: flex;
+  flex-direction: row;
+  max-width: 920px;   /* mesmo max-width do hero */
+  margin: 0 auto;     /* centraliza horizontalmente */    /* ajusta o espaçamento entre colunas */
+  align-items: center;
+  gap: 120px;
 }
 
 /* TÍTULO */
