--- a/artistic-works.html
+++ b/artistic-works.html
@@ -154,11 +154,10 @@
   letter-spacing: .015em;
   color: var(--ink);
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   max-width: 920px;   /* mesmo max-width do hero */
   margin: 0 auto;     /* centraliza horizontalmente */    /* ajusta o espaçamento entre colunas */
-  align-items: center;
-  gap: 120px;
+  align-items: flex-start;
 }
 
 /* TÍTULO */
