--- a/artistic-works.html
+++ b/artistic-works.html
@@ -35,7 +35,7 @@
       background:
         radial-gradient(1200px 700px at 20% 10%, rgba(6,7,11,.34), rgba(6,7,11,.12) 55%, rgba(6,7,11,.28) 100%),
         linear-gradient(to bottom, rgba(6,7,11,.24), rgba(6,7,11,.24));
-      pointer-events:none;
+      pointer-events:center;
       z-index:0;
     }
 
