--- a/artistic-works.html
+++ b/artistic-works.html
@@ -267,7 +267,7 @@
     <div class="project-header">
       <h1>
         Send me a color
-        <span>Mechanical Gestures to Preserve Flowers:
+        <span>Mechanical Gestures to Preserve Flowers:<br>
               An essay on color reproduction using contact duplication systems</span>
       </h1>
 
