--- a/artistic-works.html
+++ b/artistic-works.html
@@ -158,6 +158,9 @@
   max-width: 920px;   /* mesmo max-width do hero */
   margin: 0 auto;     /* centraliza horizontalmente */    /* ajusta o espaçamento entre colunas */
   align-items: flex-start;
+  justify-content: flex-start; /* vertical: ao topo */
+max-width: 920px;
+margin: 0 auto;
 }
 
 /* TÍTULO */
