--- a/artistic-works.html
+++ b/artistic-works.html
@@ -142,7 +142,13 @@
 /* CONTAINER */
 .project-layout{
   background:#0a0c11;
-  padding:0px 10px 140px;
+  padding: 0px 10px 140px;
+  display: flex;              /* 👈 FALTA ISTO */
+  gap: 60px;                  /* espaço entre texto e imagem */
+  align-items: flex-start;
+}
+
+
 }
 
 /* TEXTO */
@@ -159,8 +165,8 @@
   margin: 0 auto;     /* centraliza horizontalmente */    /* ajusta o espaçamento entre colunas */
   align-items: flex-start;
   justify-content: flex-start; /* vertical: ao topo */
-max-width: 920px;
-margin: 0 auto;
+flex: 0 0 55%;      /* texto ocupa 55% */
+  margin: 0;
 }
 
 /* TÍTULO */
@@ -228,6 +234,7 @@ margin: 0 auto;
   width: 100%;
   height: auto;
   display: block;
+  flex: 0 0 45%;
 }
   </style>
 </head>
