--- a/artistic-works.html
+++ b/artistic-works.html
@@ -1,12 +1,17 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Mariana Torres - Send me a Color</title>
+  <title>Mariana Torres — Artistic Works</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- CSS PRINCIPAL (CAMINHO RELATIVO CORRETO) -->
+  <link rel="stylesheet" href="./style.css" />
 
   <!-- Fonts -->
   <link href="https://fonts.cdnfonts.com/css/bebas-kai" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css2?family=Source+Serif+4:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Source+Serif+4:wght@300;400;500;600&display=swap" rel="stylesheet" />
+</head>
 
   <style>
     :root{
